# SoCo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  didltest.py  makefile  pwt-test.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  soco.py
dev_tools/: analyse_ws.ini  analyse_ws.py  analyze_event_stream.py  pychecker.bat  pychecker.sh  sonosdump.py
doc/: Makefile  authors.rst  conf.py  data-structures-mod.rst  events.rst  examples.rst  faq.rst  getting_started.rst  index.rst  make.bat  modules.rst  plugins.rst  release-howto.rst  release_notes.rst  services.rst  soco-mod.rst  soco.compat.rst  soco.config.rst  soco.ms_data_structures.rst  soco.music_services.accounts.rst  soco.music_services.music_service.rst  soco.plugins.example.rst  soco.plugins.wimp.rst  soco.rst  soco.snapshot.rst  soco.xml.rst  topology.rst  tutorial.rst  unittests.rst
soco/: __init__.py  alarms.py  cache.py  compat.py  config.py  core.py  data_structure_quirks.py  data_structures.py  data_structures_entry.py  didl_lite.py  discovery.py  event_structures.py  events.py  events_asyncio.py  events_base.py  events_base_twisted.py  events_twisted.py  exceptions.py  groups.py  ms_data_structures.py  music_library.py  services.py  snapshot.py  soap.py  utils.py  xml.py  zgs.py  zonegroupstate.py
tests/: .test_core.py.swp  conftest.py  official_and_extended_didl_classes.txt  soco_unittest.py  test_alarms.py  test_cache.py  test_core.py  test_data_structures_entry_integration.py  test_discovery.py  test_events.py  test_integration.py  test_lists.py  test_metadata_parsing.py  test_ms_data_structures.py  test_music_library.py  test_music_service_data_structures.py  test_music_services.py  test_musicservices.py  test_new_datastructures.py  test_services.py  test_singleton.py  test_snapshot.py  test_soap.py  test_utils.py  test_xml.py
unittest/: conftest.py  execute_unittests.py  soco_unittest.py  test_cache.py  test_core.py  test_data_structures.py  test_discovery.py  test_events.py  test_integration.py  test_ms_data_structures.py  test_musicservices.py  test_services.py  (+4 more)
(+149 files in other folders)
